--- a/Visual Studio/2D RPG Negiramen/Views/ConfigurationPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/ConfigurationPage.xaml
@@ -90,14 +90,14 @@
             <!-- 「あなたのサークル名」 -->
             <Label Grid.Row="0" Grid.Column="3"
                    VerticalTextAlignment="Center"
-                   Text="{app:Translate YourCircleName}"
-                   SemanticProperties.Hint="Your circle name"/>
+                   Text="{app:Translate YourCircleFolderName}"
+                   SemanticProperties.Hint="Your circle folder name"/>
 
             <!-- 「あなたの作品名」 -->
             <Label Grid.Row="0" Grid.Column="5"
                    VerticalTextAlignment="Center"
-                   Text="{app:Translate YourWorkName}"
-                   SemanticProperties.Hint="Your work name"/>
+                   Text="{app:Translate YourWorkFolderName}"
+                   SemanticProperties.Hint="Your work folder name"/>
 
             <!-- 「このフォルダの下は自動編集されます」 -->
             <Label Grid.Row="0" Grid.Column="7"
