--- a/Visual Studio/2D RPG Negiramen/Views/Login1Page.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/Login1Page.xaml
@@ -8,7 +8,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="_2D_RPG_Negiramen.Views.Login1Page"
              Title="Login1Page"
-             Loaded="ContentPage_Loaded">
+             Loaded="ContentPage_Loaded"
+             NavigatedTo="ContentPage_NavigatedTo">
 
     <!-- 束縛しているビューモデル -->
     <ContentPage.BindingContext>
