--- a/Visual Studio/2D RPG Negiramen/Views/Login1Page.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/Login1Page.xaml
@@ -108,10 +108,10 @@
                         VerticalOptions="Center"
                         HorizontalOptions="StartAndExpand"
                         WidthRequest="300"
-                        ItemsSource="{Binding EntryList}"
-                        SelectedItem="{Binding SelectedEntry}"
+                        ItemsSource="{Binding ProjectIdList}"
+                        SelectedItem="{Binding SelectedProjectId}"
                         ItemDisplayBinding="{Binding PresentableTextAsStr}"
-                        SelectedIndexChanged="EntryListPicker_SelectedIndexChanged"/>
+                        SelectedIndexChanged="ProjectIdListPicker_SelectedIndexChanged"/>
 
                 <!--    ３行目
                         ======
