--- a/Visual Studio/2D RPG Negiramen/Views/Login2Page.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/Login2Page.xaml
@@ -121,6 +121,7 @@
             <!-- 「新しく作る」 -->
             <Button WidthRequest="300"
                     Text="{app:Translate CreateANewProject}"
+                    IsEnabled="{Binding IsEnabledOfNewProjectButton}"
                     Clicked="CreateANewProjectButton_Clicked"/>
         </Grid>
     </Grid>
