--- a/Visual Studio/2D RPG Negiramen/Views/Login1Page.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/Login1Page.xaml
@@ -63,7 +63,7 @@
     <Grid RowDefinitions="*,64">
         <ScrollView>
             <Grid Grid.Row="0"
-              RowDefinitions="200, 20,48,*" ColumnDefinitions="20, 1*, 20, 1*, 2*"
+              RowDefinitions="190, 20, 48, 20, 48, 20, 48, *" ColumnDefinitions="1*, 20, 250, 50, 1*"
               Padding="8,8,8,8">
 
                 <!--    １行目
@@ -77,10 +77,9 @@
                        FontSize="48"/>
 
                     <Image HorizontalOptions="Center"
-                       Margin="0,10,0,0"
-                       HeightRequest="100"
-                        Source="title_header.png"
-                        SemanticProperties.Description="title header"/>
+                           HeightRequest="100"
+                           Source="title_header.png"
+                           SemanticProperties.Description="title header"/>
 
                 </VerticalStackLayout>
 
@@ -88,41 +87,60 @@
                         ======
                 -->
                 <!-- 「あなたのサークル・フォルダ名」 -->
-                <Label Grid.Row="1" Grid.Column="1"
+                <Label Grid.Row="1" Grid.Column="2"
                        Text="{app:Translate YourCircleFolderName}"/>
-
-                <!-- 「あなたの作品フォルダ名」 -->
-                <Label Grid.Row="1" Grid.Column="3"
-                       Text="{app:Translate YourWorkFolderName}"/>
-
-                <!-- 「リストから選ぶ」 -->
-                <Label Grid.Row="1" Grid.Column="4"
-                       Text="{app:Translate ChooseFromList}"/>
 
                 <!--    ３行目
                         ======
                 -->
                 <!-- 「📂」 -->
-                <Label Grid.Row="2" Grid.Column="0"
+                <Label Grid.Row="2" Grid.Column="1"
                        VerticalOptions="Center"
                        Text="📂"/>
                 
-                <Entry Grid.Row="2" Grid.Column="1"
+                <Entry Grid.Row="2" Grid.Column="2"
                        Placeholder="Doujin Circle Grayscale"
                        Text="{Binding YourCircleFolderNameAsStr}"
                        TextChanged="YourCircleFolderNameEntry_TextChanged"/>
 
+                
+               
+                <!--    ４行目
+                        ======
+                -->
+                <!-- 「あなたの作品フォルダ名」 -->
+                <Label Grid.Row="3" Grid.Column="2"
+                       Text="{app:Translate YourWorkFolderName}"/>
+
+                <!--    ５行目
+                        ======
+                -->
                 <!-- 「📂」 -->
-                <Label Grid.Row="2" Grid.Column="2"
+                <Label Grid.Row="4" Grid.Column="1"
                        VerticalOptions="Center"
                        Text="📂"/>
-
-                <Entry Grid.Row="2" Grid.Column="3"
+                
+                <!-- あなたの作品フォルダ名 -->
+                <Entry Grid.Row="4" Grid.Column="2"
                        Placeholder="Negiramen Quest"
                        Text="{Binding YourWorkFolderNameAsStr}"
                        TextChanged="YourWorkFolderNameEntry_TextChanged"/>
-                
-                <Picker Grid.Row="2" Grid.Column="4"
+
+                <!--    ６行目
+                        ======
+                -->
+                <!-- 「リストから選ぶ」 -->
+                <Label Grid.Row="5" Grid.Column="2"
+                       Text="{app:Translate ChooseFromList}"/>
+
+                <!--    ７行目
+                        ======
+                -->
+                <!-- 「📂」 -->
+                <Label Grid.Row="6" Grid.Column="1"
+                       VerticalOptions="Center"
+                       Text="📂"/>
+                <Picker Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="2"
                         VerticalOptions="Center"
                         HorizontalOptions="StartAndExpand"
                         WidthRequest="300"
@@ -131,11 +149,11 @@
                         ItemDisplayBinding="{Binding PresentableTextAsStr}"
                         SelectedIndexChanged="ProjectIdListPicker_SelectedIndexChanged"/>
 
-                <!--    ４行目
+                <!--    ８行目
                         ======
                 -->
-                <HorizontalStackLayout Grid.Row="3" Grid.ColumnSpan="4"
-                                       Padding="40,8,8,8">
+                <HorizontalStackLayout Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="3"
+                                       Padding="0,8,0,8">
                     <Grid RowDefinitions="32,20"
                           Padding="0,0,0,16">
                         <!-- 「文字数」 -->
