--- a/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
@@ -67,7 +67,8 @@
 
             <Button WidthRequest="150"
                     HeightRequest="44"
-                    Text="インポート"/>
+                    Text="インポート"
+                    Clicked="ImportButton_Clicked"/>
         </HorizontalStackLayout>
         
         <!--
