--- a/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
@@ -84,7 +84,8 @@
                     HeightRequest="20"
                     Text="タイルセット削除"
                     IsEnabled="{Binding IsEnabledTilesetRemoveButton}"
-                    Style="{DynamicResource dangerButton}"/>
+                    Style="{DynamicResource dangerButton}"
+                    Clicked="TilesetDeleteButton_Clicked"/>
 
         </Grid>
         
