--- a/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
@@ -180,6 +180,7 @@
                    IsReadOnly="True"
                    BackgroundColor="Transparent"/>
 
+            <!-- 「ファイル・ステムをＵＵＩＤに変更する」 -->
             <Button Grid.Row="1" Grid.Column="3"
                     WidthRequest="300"
                     HeightRequest="20"
